# ncmlyrics

./: pyproject.toml
ncmlyrics/: __init__.py  __main__.py  __version__.py  api.py  app.py  enum.py  error.py  lrc.py  object.py  type.py  util.py
src/ncmlyrics/: __main__.py  api.py  constant.py  enum.py  error.py  lrc.py  object.py  util.py
tests/: test_utils.py
