[project]
name = "ncmlyrics"
authors = [{ name = "Puqns67", email = "me@puqns67.icu" }]
dependencies = [
	"httpx>=0.27.2",
	"h2>=4.1.0",
	"rich>=13.8.1",
	"brotli>=1.1.0",
	"zstandard>=0.23.0",
	"click>=8.1.7",
	"platformdirs>=4.3.6",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/ncmlyrics/constant.py"
pattern = "^APP_VERSION = \"(?P<version>[^\"]+)\"$"

[tool.ruff]
target-version = "py312"
line-length = 120
